--- a/login.html
+++ b/login.html
@@ -7,13 +7,20 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <!-- my CSS -->
+    <link rel="stylesheet" href="login.css">
     <title>myTrello</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-ligth bg-light">
+        <a class="navbar-brand" href="#">teste</a>
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSite">
+            <span class="navbar-toggle-icon"></span>
+        </button>
+    </nav>
     <h1>Hello, world!</h1>
 
-    <button>OK!</button>
+    <button>Ok!</button>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
