--- a/index.html
+++ b/index.html
@@ -8,32 +8,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- my CSS -->
-    <link rel="stylesheet" href="heberleandro.github.io/login.css">
+    <link rel="stylesheet" href="index.css">
+
     <title>myTrello</title>
-    
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-ligth bg-light">
-        <a class="navbar-brand" href="#">teste</a>
+    <div class="container-fluid" id="mainContainer">
+        <div class="navbar bg-primary">
+            <h1>Welcome!</h1>
+        </div> 
         
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSite">
-            <ul class="navbar-nav">
-
-                <li>
-                    <a class="nav-link" href="#">Início</a>
-                </li>
-
-            </ul>
-
-        </div>
-    </nav>
-    <h1>Hello, world!</h1>
-
-    <button>Ok!</button>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
