--- a/mainpage.html
+++ b/mainpage.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- my CSS -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="mainpage.css>
 
     <title>myTrello</title>
   </head>
