--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- my CSS -->
     <link rel="stylesheet" href="login.css">
     
-    <title>myTrello</title>
+    <title>Trelei</title>
     
   </head>
   <body>
@@ -52,8 +52,8 @@
               <input type="password" class="form-control" id="senhaLogin" placeholder="Digite a senha" required minlength="4">
             </div>
             <div class="custom-control custom-checkbox checkbox-lg">
-                <input type="checkbox" class="custom-control-input" id="exampleCheck1">
-                <label class="custom-control-label" for="exampleCheck1">Mantenha-me conectado</label>
+                <input type="checkbox" class="custom-control-input" id="manterConectado">
+                <label class="custom-control-label" for="manterConectado">Mantenha-me conectado</label>
             </div>
             <button type="submit" class="btn btn-primary">Entrar</button>
           </form> 
