--- a/mainpage.html
+++ b/mainpage.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- my CSS -->
-    <link rel="stylesheet" href="mainpage.css>
+    <link rel="stylesheet" href="mainpage.css">
 
-    <title>myTrello</title>
+    <title>Trelei</title>
   </head>
   <body>
     <div class="container-fluid" id="mainContainer">
@@ -20,6 +20,8 @@
         
     </div>
 
+    <!-- My js -->
+    <script src="mainpage.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
