--- a/mainpage.html
+++ b/mainpage.html
@@ -15,7 +15,15 @@
   <body>
     <div class="container-fluid" id="mainContainer">
         <div class="navbar bg-primary">
-            <h1>Welcome!</h1>
+            <div class="nav-item">
+              <div id="divHomeIcon">
+                <img src="ibagens/home.png" alt="Home" id="homeIcon"> 
+              </div>
+            </div>
+              <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler bg-secondary" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
         </div> 
         
     </div>
