mainpage realy started

--- a/mainpage.html
+++ b/mainpage.html
@@ -13,8 +13,7 @@
     <title>Trelei</title>
   </head>
   <body onload="verificaSessao()">
-    <div id="background"> 
-
+    <div id="background" class="bg-primary"> 
       <div class="container-fluid bg-transparent" id="mainContainer">
           <div class="navbar">
               <div class="nav-item bg-transparent">
@@ -29,19 +28,27 @@
                         H
                       </span>
                     </div>
-                      
-                      <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Link 1</a>
-                        <a class="dropdown-item" href="#">Link 2</a>
-                        <a class="dropdown-item" href="#">Link 3</a>
-                      </div>
                   </button>
-              </div>
-          </div> 
-      </div>
 
-  </div>
+                  <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="#">Link 1</a>
+                    <a class="dropdown-item" href="#">Link 2</a>
+                    <a class="dropdown-item" href="#">Link 3</a>
+                  </div>
+                </div>
+              </div> <!-- NAV BAR-->
 
+              <div class="container-fluid" id="divUserHome">
+                <div class="row justify-content-md-center">
+                  <div class="col col-8">
+                    aaa
+                  </div>
+                </div>
+            </div>
+
+
+          </div>
+      </div><!-- background -->
     <!-- My js -->
     <script src="mainpage.js"></script>
     <!-- Optional JavaScript -->
