--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Trelei</title>
     
   </head>
-  <body onload="verificaSessao()">
+  <body onload="verificaSessaoAberta()">
     <div class="container">
       <div class="row justify-content-md-center" id="divGridLayout">
         <!-- Alerts -->
