Boards page started

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div id="divA">
             <a id="mostrarCadastro" href="#">Criar uma conta</a>     
           </div>
-          <form id="formLogin" action="mainpage.html"> 
+          <form id="formLogin" action="user/mainpage.html"> 
             <div class="form-group">
               <label>Usuário</label>
               <input type="text" class="form-control" id="usernameLogin" placeholder="Digite o usuario" required>
