--- a/user/mainpage.html
+++ b/user/mainpage.html
@@ -21,8 +21,11 @@
       <div class="navbar">
         <div class="nav-item bg-transparent">
           <div id="divHomeIcon">
-            <img src="../ibagens/homepage.png" alt="Home" id="homeIcon">
+            <img src="../imagens/homepage.png" alt="Home" id="homeIcon">
           </div>
+        </div>
+        <div class="nav-item" id="logo">
+          <img src="../imagens/Trellei.png" alt="Trellei">
         </div>
         <div class="nav-item dropdown">
           <button id="menuUser" data-toggle="dropdown">
