Melhora na page do board

--- a/board/board.html
+++ b/board/board.html
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="nav-item" id="logo">
-          <img src="../imagens/Trellei.png" alt="Trellei">
+          <img src="../imagens/Trellei.png" alt="Trellei" id="imgLogo">
         </div>
         <div class="nav-item dropdown">
           <button id="menuUser" data-toggle="dropdown">
@@ -44,9 +44,10 @@
           </div>
         </div>
 
-      </div>
-    </div>
+      </div><!-- NAVBAR -->
 
+    </div><!-- CONTEINER MAIN -->
+  </div><!-- BG DIV -->
 
 
     <!-- my js -->
