--- a/user/mainpage.html
+++ b/user/mainpage.html
@@ -12,7 +12,7 @@
   <!-- my CSS -->
   <link rel="stylesheet" href="mainpage.css">
 
-  <title>Trelei | Home</title>
+  <title>Trellei | Home</title>
 </head>
 
 <body onload="verificaSessao()">
