--- a/board/board.html
+++ b/board/board.html
@@ -43,26 +43,48 @@
             </div>
           </div>
         </div>
-
       </div><!-- NAVBAR -->
+
+      <div class="row">
+        <div class="col col-12" id="boardHeader">
+          <div id="divBoardName" class="border-right">
+            <span id="spanName"></span>
+          </div>
+          <div id="divMenuBoard" class="dropdown">
+            <button class="btn" data-toggle="dropdown" id="menuBoard">
+              <span>Opções do Quadro</span>
+            </button>
+
+            <div class="dropdown-menu dropdown-menu-right">
+              <div>
+                <div id="divUserName" class="text-center border-bottom">
+                  <a class="dropdown-item" href="#">Renomear Quadro</a>
+                </div>
+                <a class="dropdown-item" id="Logout" href="#">Alterar Cor do Quadro</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div><!-- Row -->
 
     </div><!-- CONTEINER MAIN -->
   </div><!-- BG DIV -->
 
 
-    <!-- my js -->
-    <script src="board.js"></script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
+  <!-- my js -->
+  <script src="board.js"></script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
