--- a/board/board.html
+++ b/board/board.html
@@ -70,12 +70,12 @@
           </div>
         </div> <!-- Col -->
       </div><!-- Row -->
-      <div class="row border border-primary teste justify-content-center ">
-        <div class="col-6 m-1 d-inline-block">
-          AAAA
+      <div class="row overflow-auto px-3 py-1" id="listaDeListas">
+        <div class="lista border col-3">
+          
         </div>
-        <div class="col-6 m-1 d-inline-block">
-          AAAA
+        <div class="col-2" id="divCriarLista">
+          <span>Criar nova Lista</span>
         </div>
       </div>
 
